# essay-discourse-labeler

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
configs/: base.yaml
docs/: architecture.md
scripts/: predict.sh  train.sh
src/essay_labeler/: __init__.py  cli.py  config.py  data.py  dataset.py  decoding.py  labels.py  metrics.py  modeling.py  pipeline.py  postprocess.py  train.py  utils.py
tests/: test_cli.py  test_config.py  test_labels.py  test_metrics.py  test_pipeline.py  test_postprocess.py
tests/fixtures/sample_data/: train.csv
tests/fixtures/sample_data/test/: doc3.txt
tests/fixtures/sample_data/train/: doc1.txt  doc2.txt
